--- a/src/Main_Screen.css
+++ b/src/Main_Screen.css
@@ -1,6 +1,13 @@
 .App {
-  text-align: center;
-  margin-top: 15rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh; /* 画面全体を占める */
+  background-image: url("./images/background.png");
+  background-size: cover;
+  font-family: "Arial", sans-serif;
+  color: #333;
 }
 
 p {
