--- a/src/App.css
+++ b/src/App.css
@@ -138,3 +138,82 @@
 .cloud:hover {
   animation: shake 0.5s ease-in-out infinite;
 }
+
+.character {
+  position: relative;
+  width: 100px; /* キャラクター全体の幅を調整 */
+  height: 200px; /* キャラクター全体の高さを調整 */
+}
+
+/* 各部位のスタイル */
+.head {
+  position: absolute;
+  top: 0;
+  left: 30px;
+  width: 40px;
+  height: 60px;
+  background-image: url("head.png");
+  background-size: cover;
+}
+
+.right-arm,
+.left-arm {
+  position: absolute;
+  top: 60px;
+  width: 20px;
+  height: 60px;
+  background-size: cover;
+}
+
+.right-arm {
+  left: 60px;
+  background-image: url("right-arm.png");
+  animation: arm-swing 1s ease-in-out infinite alternate;
+}
+
+.left-arm {
+  left: 20px;
+  background-image: url("left-arm.png");
+  animation: arm-swing 1s ease-in-out infinite alternate-reverse;
+}
+
+.right-leg,
+.left-leg {
+  position: absolute;
+  top: 120px;
+  width: 20px;
+  height: 80px;
+  background-size: cover;
+}
+
+.right-leg {
+  left: 50px;
+  background-image: url("right-leg.png");
+  animation: leg-swing 1s ease-in-out infinite alternate;
+}
+
+.left-leg {
+  left: 30px;
+  background-image: url("left-leg.png");
+  animation: leg-swing 1s ease-in-out infinite alternate-reverse;
+}
+
+/* 手の振り方 */
+@keyframes arm-swing {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(15deg);
+  }
+}
+
+/* 足の動き */
+@keyframes leg-swing {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(-15deg);
+  }
+}
