--- a/src/App.css
+++ b/src/App.css
@@ -102,6 +102,12 @@
   background-image: url("./assets/sky-cloudy.png");
   z-index: 0;
 
+  .cloud-container {
+    position: relative;
+    width: 100%;
+    height: 100%;
+  }
+
   /* 雲のアニメーションのスタイル */
   .cloud {
     position: absolute;
