--- a/src/Main_Screen.css
+++ b/src/Main_Screen.css
@@ -49,9 +49,9 @@ button {
 
 
 .icon-image {
-  width: 100%; 
-  height: 100%;
-  object-fit: cover; 
+  top: 10px;
+  right: 10px;
+  position: absolute; 
 }
 
 
