--- a/src/App.css
+++ b/src/App.css
@@ -171,15 +171,12 @@
   height: 100vh;
   background-size: cover;
   font-family: "Arial", sans-serif;
-  color: #333;
+  color: #ffffff;
+  font-size: x-large;
+  font-weight: bold;
+  text-shadow: 2px, #333;
   background-image: url("./assets/sky-clear.png");
   z-index: 0;
-
-  .cloud-container {
-    position: relative;
-    width: 100%;
-    height: 100%;
-  }
 
   .character {
     position: absolute;
@@ -275,6 +272,9 @@
   background-size: cover;
   font-family: "Arial", sans-serif;
   color: #333;
+  font-size: x-large;
+  font-weight: bold;
+  text-shadow: 2px, #333;
   background-image: url("./assets/sky-cloudy.png");
   z-index: 0;
 
@@ -446,11 +446,14 @@
   height: 100vh;
   background-size: cover;
   font-family: "Arial", sans-serif;
-  color: #333;
+  color: #ffffff;
+  font-size: x-large;
+  font-weight: bold;
+  text-shadow: 2px, #333;
   background-image: url("./assets/sky-rainy.png");
   z-index: 0;
 
-  .cloud-container {
+  .rain-container {
     position: relative;
     width: 100%;
     height: 100%;
@@ -513,7 +516,7 @@
   }
 
   /* ホバー時にアニメーションを変更 */
-  .cloud:hover {
+  .rain:hover {
     animation: shake 0.5s ease-in-out infinite;
   }
 
@@ -611,13 +614,45 @@
   background-size: cover;
   font-family: "Arial", sans-serif;
   color: #333;
+  font-size: x-large;
+  font-weight: bold;
+  text-shadow: 2px, #333;
   background-image: url("./assets/sky-sunny.png");
   z-index: 0;
 
-  .cloud-container {
+  .sunny-container {
     position: relative;
     width: 100%;
     height: 100%;
+  }
+
+  .rian {
+    position: absolute;
+    top: 50px;
+    left: 600px;
+    width: 300px; /* 雲のサイズ */
+    height: 150px;
+    background-image: url("./assets/flower.png"); /* ここで雲の画像パスを指定 */
+    background-size: contain;
+    background-repeat: no-repeat;
+    animation: float 6s ease-in-out infinite;
+    transform-origin: center;
+    z-index: 1;
+  }
+
+  .flower1 {
+    top: 70px;
+    left: 10%; /* コンテナ内の左端に配置 */
+  }
+
+  .flower2 {
+    top: 120px;
+    left: 50%; /* コンテナの中央に配置 */
+  }
+
+  .flower3 {
+    top: 70px;
+    left: 70%; /* コンテナ内の右端に配置 */
   }
 
   .character {
@@ -713,11 +748,14 @@
   height: 100vh;
   background-size: cover;
   font-family: "Arial", sans-serif;
-  color: #333;
+  color: #ffffff;
+  font-size: x-large;
+  font-weight: bold;
+  text-shadow: 2px, #333;
   background-image: url("./assets/sky-thunder.png");
   z-index: 0;
 
-  .cloud-container {
+  .thunder-container {
     position: relative;
     width: 100%;
     height: 100%;
